<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pop_layout"
    android:layout_width="440px"
    android:layout_height="match_parent"
    android:background="#212123"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/person_seting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/leftname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22px"
            android:layout_marginTop="3dp"
            android:text="@string/image_filter"
            android:textColor="@color/white"
            android:textSize="30px"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/leftname2"
            android:layout_width="28px"
            android:layout_height="28px"
            android:layout_marginRight="28px"
            android:src="@mipmap/image_at_exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_edittext_bg"
            android:drawableRight="@mipmap/image_search_for"
            android:hint="@string/image_edittext_hint"
            android:textColorHint="@color/gray26"
            android:textSize="24px"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4A4A52" />
    <!--?android:attr/selectableItemBackground-水波纹效果-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="31px"
        android:text="@string/image_edittext_1"
        android:textColor="@color/black10"
        android:textSize="20px" />

    <LinearLayout
        android:id="@+id/shenqing"
        android:layout_width="match_parent"
        android:layout_height="56px"
        android:layout_marginTop="20px"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_text_2" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_text_3" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_text_4" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="31px"
        android:text="@string/image_text_5"
        android:textColor="@color/black10"
        android:textSize="20px" />

    <LinearLayout
        android:id="@+id/shenqing1"
        android:layout_width="match_parent"
        android:layout_height="56px"
        android:layout_marginTop="20px"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_text_6" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_text_7" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_text_8" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shenqing2"
        android:layout_width="match_parent"
        android:layout_height="56px"
        android:layout_marginTop="20px"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_text_9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_text_10" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_text_11" />
    </LinearLayout>

    <View
        android:layout_width="230dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="#33000000" />

    <LinearLayout
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="退出"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>