<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@drawable/popup_login_time_bg">

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupLoginTimeTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="50px"
		android:layout_marginTop="40px"
		android:includeFontPadding="false"
		android:text="@string/login_login_time_title"
		android:textColor="@android:color/white"
		android:textSize="30px"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<RadioGroup
		android:id="@+id/rgPopupLoginTime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="50px"
		android:layout_marginTop="40px"
		android:layout_marginEnd="50px"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/actvPopupLoginTimeTitle">

		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/acrbPopupLoginTime2hours"
			style="@style/login_time_radio_button"
			android:text="@string/login_login_time_2_hours" />

		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/acrbPopupLoginTime24hours"
			style="@style/login_time_radio_button"
			android:layout_marginStart="12px"
			android:text="@string/login_login_time_24_hours" />

		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/acrbPopupLoginTimeAWeek"
			style="@style/login_time_radio_button"
			android:layout_marginStart="12px"
			android:text="@string/login_login_time_a_week" />

		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/acrbPopupLoginTimePermanent"
			style="@style/login_time_radio_button"
			android:layout_marginStart="12px"
			android:text="@string/login_login_time_permanent" />

		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/acrbPopupLoginTimeCustom"
			style="@style/login_time_radio_button"
			android:layout_marginStart="12px"
			android:checked="true"
			android:text="@string/login_login_time_custom"
			android:textStyle="bold" />
	</RadioGroup>

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupLoginTimeCustomTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="50px"
		android:layout_marginTop="50px"
		android:includeFontPadding="false"
		android:text="@string/login_login_time_custom_time"
		android:textColor="@color/login_time_radio_button"
		android:textSize="24px"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/rgPopupLoginTime" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupLoginTimeCustomHour"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="50px"
		android:layout_marginEnd="50px"
		android:includeFontPadding="false"
		android:text="@string/login_login_time_hour"
		android:textColor="@color/login_time_radio_button"
		android:textSize="24px"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/rgPopupLoginTime" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupLoginTimeCustomHourNumber"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="10px"
		android:includeFontPadding="false"
		android:text="8"
		android:textColor="@color/login_get_code"
		android:textSize="40px"
		app:layout_constraintBaseline_toBaselineOf="@id/actvPopupLoginTimeCustomHour"
		app:layout_constraintEnd_toStartOf="@id/actvPopupLoginTimeCustomHour" />

	<androidx.appcompat.widget.AppCompatSeekBar
		android:id="@+id/acsbPopupLoginTimeCustom"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="35px"
		android:layout_marginTop="3px"
		android:layout_marginEnd="35px"
		android:max="22"
		android:maxHeight="3px"
		android:progress="6"
		android:progressDrawable="@drawable/login_time_seek_bar_bg"
		android:thumb="@drawable/login_time_seek_bar_thumb"
		android:thumbOffset="0dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/actvPopupLoginTimeCustomTitle" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupLoginTimeCustom2HoursPrompt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="3px"
		android:includeFontPadding="false"
		android:text="@string/login_login_time_2_hours"
		android:textColor="@color/login_time_radio_button"
		android:textSize="20px"
		app:layout_constraintStart_toStartOf="@id/actvPopupLoginTimeCustomTitle"
		app:layout_constraintTop_toBottomOf="@id/acsbPopupLoginTimeCustom" />

	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="3px"
		android:includeFontPadding="false"
		android:text="@string/login_login_time_24_hours"
		android:textColor="@color/login_time_radio_button"
		android:textSize="20px"
		app:layout_constraintEnd_toEndOf="@id/actvPopupLoginTimeCustomHour"
		app:layout_constraintTop_toBottomOf="@id/acsbPopupLoginTimeCustom" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupLoginTimeConfirm"
		android:layout_width="128px"
		android:layout_height="56px"
		android:layout_marginTop="40px"
		android:layout_marginEnd="50px"
		android:layout_marginBottom="40px"
		android:background="@drawable/popup_confirm_bg"
		android:gravity="center"
		android:includeFontPadding="false"
		android:text="@string/confirm"
		android:textColor="@android:color/white"
		android:textSize="24px"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/actvPopupLoginTimeCustom2HoursPrompt" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupLoginTimeCancel"
		android:layout_width="128px"
		android:layout_height="56px"
		android:layout_marginEnd="20px"
		android:background="@drawable/popup_cancel_bg"
		android:gravity="center"
		android:includeFontPadding="false"
		android:text="@string/cancel"
		android:textColor="@android:color/white"
		android:textSize="24px"
		android:textStyle="bold"
		app:layout_constraintEnd_toStartOf="@id/actvPopupLoginTimeConfirm"
		app:layout_constraintTop_toTopOf="@id/actvPopupLoginTimeConfirm" />
</androidx.constraintlayout.widget.ConstraintLayout>