<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@android:color/black">

	<include
		android:id="@+id/iVideoTitle"
		layout="@layout/title_file_manager" />

	<RadioGroup
		android:id="@+id/rgVideoTag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="49px"
		android:orientation="vertical"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/iVideoTitle">

		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/acrbVideoTagPrivate"
			style="@style/file_manager_tag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:button="@drawable/file_manager_tag_private_video"
			android:text="@string/video_private" />

		<androidx.appcompat.widget.AppCompatRadioButton
			android:id="@+id/acrbVideoTagPublic"
			style="@style/file_manager_tag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="40px"
			android:button="@drawable/file_manager_tag_public_video"
			android:checked="true"
			android:text="@string/video" />
	</RadioGroup>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/image_const"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:visibility="gone"
		android:layout_marginEnd="45px"
		android:gravity="center_vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/iVideoTitle"
		>

		<TextView
			android:id="@+id/video_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/image_text_14"
			android:textColor="@color/white"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="MissingConstraints" />

		<TextView
			android:id="@+id/video_textview1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/image_text_15"
			android:textSize="18dp"
			android:textColor="@color/settings_menu_selected_bg"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toEndOf="@+id/video_textview"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="MissingConstraints" />

		<TextView
			android:id="@+id/video_textview2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/image_text_16"
			android:textColor="@color/white"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toEndOf="@+id/video_textview1"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="MissingConstraints" />
	</androidx.constraintlayout.widget.ConstraintLayout>
	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
		android:id="@+id/srlVideoRefresh"
		android:layout_width="720px"
		android:layout_height="0dp"
		android:layout_marginEnd="34px"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/iVideoTitle">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvVideoList"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:overScrollMode="never" />
	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>