<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@drawable/popup_prompt_bg">

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/acivPopupNetworkConnectionFailedIcon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="40px"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@mipmap/popup_failed_icon" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupNetworkConnectionFailedTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24px"
		android:includeFontPadding="false"
		android:text="@string/network_connection_failed"
		android:textColor="@android:color/white"
		android:textSize="30px"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/acivPopupNetworkConnectionFailedIcon" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupNetworkConnectionFailedMessage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="124px"
		android:layout_marginTop="39px"
		android:layout_marginEnd="124px"
		android:includeFontPadding="false"
		android:text="@string/network_connection_failed_tip"
		android:textColor="@color/popup_content"
		android:textSize="24px"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/actvPopupNetworkConnectionFailedTitle" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/actvPopupNetworkConnectionFailedConfirm"
		android:layout_width="128px"
		android:layout_height="56px"
		android:layout_marginTop="58px"
		android:layout_marginEnd="50px"
		android:layout_marginBottom="40px"
		android:background="@drawable/popup_confirm_bg"
		android:gravity="center"
		android:includeFontPadding="false"
		android:text="@string/confirm"
		android:textColor="@android:color/white"
		android:textSize="24px"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/actvPopupNetworkConnectionFailedMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>